@@ -32,6 +32,10 @@ C Anthony Risinger
 Franck Joncourt
     - fwknop Debian package maintainer.
     - Contributed a new Debian init script.
+    - Contributed a patch to have the perl FKO module link against libfko in
+      the local directory (if it exists) so that it doesn't have to have libfko
+      completely installed in /usr/lib/.  This allows the test suite to run FKO
+      tests without installing libfko.
 
 Jonathan Schulz
     - Submitted patches to change HTTP connection type to 'close' for -R mode
