@@ -19,6 +19,10 @@ fwknop-2.0.4 (09/20/2012):
       source IP.
     - [server] Bug fix to accept SPA packets over ICMP if the fwknop client
       is executed with '-P icmp' and the user has the required privileges.
+    - Applied patch from Franck Joncourt to have the perl FKO module link
+      against libfko in the local directory (if it exists) so that it doesn't
+      have to have libfko completely installed in /usr/lib/.  This allows the
+      test suite to run FKO tests without installing libfko.
 
 fwknop-2.0.3 (09/03/2012):
     - [server] Fernando Arnaboldi from IOActive found several DoS/code
